Fix Tab1 syntax error on line 322: correct colspan quotes in print logic

--- a/app/templates/tab1.html
+++ b/app/templates/tab1.html
@@ -268,7 +268,7 @@ document.addEventListener("DOMContentLoaded", () => {
                                     <td>${row.cells[0].innerText}</td>
                                     <td>${row.cells[1].innerText}</td>
                                 </tr>
-                            `).join("") : "<tr><td colspan='2'>No items</td></tr>";
+                            `).join("") : "<tr><td colspan=\"2\">No items</td></tr>";
                             const printWin = window.open("", "_blank");
                             printWin.document.write(`
                                 <html>
